removed deprecated README file

--- a/README
+++ b/README
@@ -1,45 +1,1 @@
--------------------------------------------------
-    AST Extraction Framework for LLVM (axtor)    
-------------------------------------------------
-
-author: Simon Moll
-date: 28-02-2011
-
-
-
-
-BUILD REQUIREMENTS
-* LLVM 2.8
-* Clang 1.5
-
-BUILD INSTRUCTIONS
-1.) run "make"
-
-
-
-TOOLS
-"opencl [TEST]"
-	will run the OpenCL test case in folder "test/opencl/[TEST]". Output is written to "[TEST].cl".
-
-"glsl [TEST]"
-	will run the GLSL test case in folder "test/glsl/[TEST]". The shaders are written to "[TEST].frag" and [TEST].vert".
-
-
-
-
-AMD STREAM SDK - OpenCL TEST CASES
-The AMD Stream SDK can be downloaded from http://developer.amd.com/gpu/AMDAPPSDK/downloads/Pages/default.aspx (available as of 28.02.2011).
-The OpenCL-files that axtor generates from the OpenCL test cases that correspond to examples of that SDK can be used to replace the original files shipped with the SDK.
-The kernel function "compute" needs to be named according to the name used in the SDK test case. (e.g. "nbody_sim" for the NBody simulation case)
-
-COMPARISON OF OPTIMIZATION LEVELS   
-
-The optimization levels used for compiling the test cases to LLVM-Bitcode modules can be changed by adapting the "LLVMCC" variable in both the test/opencl/Testmake or
-the test/glsl/Testmake Makefile.
-
-
-
-
-SOURCE INTEGRATION
-includes: "src/include"
-objects: "src/files.mk" contains all relative pathes
+TODO
