--- a/TODO
+++ b/TODO
@@ -6,3 +6,4 @@ TODO
   meta-data is missing.
 * Port to other OSes than Linux.
 * Make work with whole-function-vectorizer.
+* fix memory holes in the loop driver.
