completed initial GLSL/OCL-implementation based on generic C-style backend (untested)

--- a/README
+++ b/README
@@ -21,7 +21,7 @@ the OpenCL backend and core library should work out of the box on other OSes
 as well.
 
 ##### Build Prerequisites #####
-LLVM 3.1 (last tested revision revision 152026)
+LLVM 3.1 (last tested revision 152026)
 
 
 ##### Build Instructions #####
